--- a/Python-Crash-Course/Python Crash Course Exercises .ipynb
+++ b/Python-Crash-Course/Python Crash Course Exercises .ipynb
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -43,7 +41,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "7**4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,32 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"Hi there Sam!\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hi', 'there', 'dad!']"
+       "['Hi', 'there', 'Sam!']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "s.split()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,9 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -126,7 +124,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print('The diameter of {planet} is {diameter} kilometers.'.format(planet='Earth', diameter=12742))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lst = [1,2,[3,4],[5,[100,200,['hello']],23,11],1,7]"
@@ -148,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -159,12 +155,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "lst[3][1][2][0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,21 +173,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'hello']}]}]}"
+    "d = {\n",
+    "        'k1':[\n",
+    "            1,\n",
+    "            2,\n",
+    "            3,\n",
+    "            {\n",
+    "                'tricky': [\n",
+    "                    'oh','man','inception',{'target':[1,2,3,'hello']}\n",
+    "                ]\n",
+    "            }\n",
+    "        ]\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -197,12 +202,14 @@
        "'hello'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "d['k1'][3]['tricky'][3]['target'][3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,10 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Tuple is immutable"
@@ -235,19 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def domainGet(email):\n",
+    "    return email.split('@')[1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -255,7 +259,7 @@
        "'domain.com'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,19 +277,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def findDog(string):\n",
+    "    return 'dog' in string.lower().split()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -293,7 +296,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,18 +315,18 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def countDog(string):\n",
+    "    words = string.lower().split()\n",
+    "    return len(list(filter(lambda word:word=='dog', words)))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -355,10 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "seq = ['soup','dog','salad','cat','great']"
@@ -367,9 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -382,7 +381,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list(filter(lambda word:word[0]=='s', seq))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,22 +399,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def caught_speeding(speed, is_birthday):\n",
-    "    pass"
+    "    if is_birthday:\n",
+    "        speed = speed - 5\n",
+    "    if speed <= 60:\n",
+    "        return 'No Ticket'\n",
+    "    elif speed <= 80:\n",
+    "        return 'Small Ticket'\n",
+    "    else:\n",
+    "        return 'Big Ticket'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -421,7 +425,7 @@
        "'Small Ticket'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,10 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -443,7 +445,7 @@
        "'Big Ticket'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,9 +478,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
